--- a/source/_posts/书籍分享.md
+++ b/source/_posts/书籍分享.md
@@ -1,5 +1,6 @@
 ---
 title: 书籍分享
+tags: 自闭症资源
 ---
 
 |      | 书籍                                                                                                                       |                                                                                                                                                                                     |
