--- a/source/_posts/书籍分享.md
+++ b/source/_posts/书籍分享.md
@@ -1,6 +1,9 @@
 ---
 title: 书籍分享
 tags: 自闭症资源
+categories:
+    - 书籍分享
+    - 自闭症相关
 ---
 
 |      | 书籍                                                                                                                       |                                                                                                                                                                                     |
