日志暂时提交

--- a/source/_posts/ASDBook/书籍分享.md
+++ b/source/_posts/ASDBook/书籍分享.md
@@ -1,9 +1,9 @@
 ---
 title: 书籍分享
 tags: 自闭症资源
-categories:
-    - 书籍分享
-    - 自闭症相关
+categories: 书籍分享
+copyright_author: Demon 
+copyright_info: 请勿转载
 ---
 
 |      | 书籍                                                                                                                       |                                                                                                                                                                                     |
