--- a/source/_posts/ASD_Res/自理能力清单.md
+++ b/source/_posts/ASD_Res/自理能力清单.md
@@ -1,7 +1,14 @@
 ---
 title: 自理能力清单
-categories:
-    - 自闭症相关
+date: 2024/7/13 02:46:25
+comments: true
+tags:
+    - ASD
+    - 自闭症
+    - 孤独症
+categories: 自闭症资源
+copyright_author: Demon 
+copyright_info: 请勿转载
 ---
 
 VB-MAPP自理能力检查清单
