--- a/source/_posts/ASDBook/书籍分享.md
+++ b/source/_posts/ASDBook/书籍分享.md
@@ -4,6 +4,7 @@ tags: 自闭症资源
 categories: 书籍分享
 copyright_author: Demon 
 copyright_info: 请勿转载
+date: 2024/7/13 02:46:25
 ---
 
 |      | 书籍                                                                                                                       |                                                                                                                                                                                     |
