尝试下把图片资源放到本地

--- a/source/_posts/ASDBook/自闭症书籍分享.md
+++ b/source/_posts/ASDBook/自闭症书籍分享.md
@@ -1,7 +1,7 @@
 ---
-title: 书籍分享
+title: 自闭症书籍分享
 tags: 自闭症资源
-categories: 书籍分享
+categories: 自闭症书籍分享
 copyright_author: Demon 
 copyright_info: 请勿转载
 date: 2024/7/13 02:46:25
