--- a/source/_posts/ASDBook/自闭症书籍分享.md
+++ b/source/_posts/ASDBook/自闭症书籍分享.md
@@ -8,7 +8,7 @@ date: 2024/7/13 02:46:25
 # 文章顶部图片
 top_img:
 # 文章缩略图(如果没有设置 top_img,文章页顶部将显示缩略图，可设为 false/图片地址/留空)
-cover
+cover:
 ---
 
 |      | 书籍                                                                                                                       |                                                                                                                                                                                     |
