--- a/source/_posts/ASDMovies/0002-影视-雨人.md
+++ b/source/_posts/ASDMovies/0002-影视-雨人.md
@@ -10,6 +10,8 @@ tags:
 categories: 影视分享
 copyright_author: Demon 
 copyright_info: 请勿转载
+top_img: https://raw.gitcode.com/qq626928256/PicBed/raw/main/RainMan-Top.jpg
+cover: https://raw.gitcode.com/qq626928256/PicBed/raw/main/RainMan-Cover.jpg
 ---
 
 # [豆瓣链接](https://movie.douban.com/subject/1291870/)
