--- a/source/_posts/ASDMovies/0001-影视-海洋天堂.md
+++ b/source/_posts/ASDMovies/0001-影视-海洋天堂.md
@@ -10,6 +10,8 @@ tags:
 categories: 影视分享
 copyright_author: Demon 
 copyright_info: 请勿转载
+top_img: https://raw.gitcode.com/qq626928256/PicBed/raw/main/OceanHeaven-Top.jpg
+cover: https://raw.gitcode.com/qq626928256/PicBed/raw/main/OceanHeaven-Cover.jpg
 ---
 
 
