--- a/source/_posts/ASDMovies/0003-影视-自闭历程.md
+++ b/source/_posts/ASDMovies/0003-影视-自闭历程.md
@@ -10,6 +10,8 @@ tags:
 categories: 影视分享
 copyright_author: Demon 
 copyright_info: 请勿转载
+top_img: https://raw.gitcode.com/qq626928256/PicBed/raw/main/TempleGrandin-Top.jpg
+cover: https://raw.gitcode.com/qq626928256/PicBed/raw/main/TempleGrandin-Cover.jpg
 ---
 # [豆瓣链接](https://movie.douban.com/subject/3236904/)
 根据自幼患有自闭症的美国动物科学家、畜牧学博士——天宝·葛兰汀（克莱尔·丹尼斯 Claire Danes饰）的个人自传改编而成，讲述天宝与众不同的成长经历。
